--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+.footer-copyright {
+	background-color: white;
+}
+
 .copyright {
 	color: #848484;
 }
